<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/title_air_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageButton
	        android:id="@+id/back_air_info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="#0000"
	        android:layout_marginTop="3dip"
	        android:paddingLeft="5dip"
	        android:paddingRight="5dip"
	        android:src="@drawable/back" />
        
        <TextView 
            android:id="@+id/title_text_air_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dip"
            android:layout_gravity="bottom"
            android:text="@string/title_text_air_info" />      
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/air_zhiliang_air_info"
        android:layout_height="300dip"
        android:layout_width="match_parent"
        android:layout_below="@id/title_air_info"
        android:paddingTop="20dip"
        android:orientation="vertical"
        android:gravity="center">
        
        <TextView 
            android:id="@+id/air_quality_text_air_info"
            android:layout_width="220dip"
            android:layout_height="100dip"
            android:gravity="center"
            android:text="@string/air_quality_text_air_info"/>

        <TextView 
            android:id="@+id/air_pm2.5_text_air_info"
            android:layout_width="220dip"
            android:layout_height="100dip"
            android:paddingTop="20dip"
            android:gravity="center"
            android:text="@string/air_pm2.5_text_air_info"/>
        
        <TextView 
            android:id="@+id/heather_text_air_info"
            android:layout_width="220dip"
            android:layout_height="100dip"
            android:paddingTop="20dip"
            android:gravity="center"
            android:text="@string/heather_text_air_info"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        
        <ImageButton
            android:id="@+id/share_air_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#0000"
            android:src="@drawable/share"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="3dip"
            android:text="@string/share"/>
        
    </LinearLayout>
    

</RelativeLayout>
