<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/title_air_info_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_vertical"
        android:orientation="horizontal" >"
        "
        <ImageButton 
            android:id="@+id/back_air_info_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:src="@drawable/back"/>
        
        <TextView
            android:id="@+id/title_text_air_info_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text_air_info_share" />
        "
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">"
        
        <EditText
            android:id="@+id/text_air_info_share"
            android:layout_width="280dip"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/text_air_info_share"/>
        
        <ImageView
            android:layout_width="280dip"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:src="@drawable/back"/>
        
        <ImageButton
            android:id="@+id/share_air_info_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:src="@drawable/share"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:text="@string/share"/>"
        
    </LinearLayout>

</LinearLayout>
